--- a/components/TableOfContents/TableOfContents.module.css
+++ b/components/TableOfContents/TableOfContents.module.css
@@ -80,6 +80,15 @@
 	color: rgba(74, 158, 255, 1);
 }
 
+.tocItemIntro {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	overflow: hidden;
+	padding-bottom: 0;
+	margin-bottom: 0.375rem;
+}
+
 .tocConnector {
 	position: absolute;
 	top: -0.375rem;
